# llm_utils

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: i18n-commit.yml  i18n-issue.yml
notebooks/: requirements.txt
notebooks/insights/aime2024/: aime_sweep.py
notebooks/insights/longbench/: sample_generate.py
notebooks/insights/ruler/: create_datasets.sh  fwe_sweep.py
src/llm_study/: kv_calc.py
src/llm_study/model_patch/: llama3_hook.py
src/llm_study/probe/: llm_prober.py  probe_config.py
src/llm_study/utils/: feature.py
